--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ asgiref==3.2.3
 async-timeout==3.0.1
 celery==4.4.0
 channels==2.4.0
-channels-redis==2.4.1
+channels-redis==2.4.2
 daphne==2.4.1
 Django==3.0.3
 django-heroku
@@ -25,6 +25,7 @@ hiredis==1.0.1
 django-redis-cache==2.1.0
 redis==3.4.1
 hyperlink==19.0.0
+idna==2.5
 oauthlib==3.1.0
 opencv-contrib-python==4.1.0.25
 psycopg2-binary==2.8.4
